--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lms-tutorial",
+  "name": "ecoTools",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,17 +11,19 @@
   "dependencies": {
     "@apollo/client": "^3.8.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.4.3",
-    "@clerk/nextjs": "^4.24.1",
     "@hookform/resolvers": "^3.3.1",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "graphql": "^16.8.1",
@@ -31,12 +33,14 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
-    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uploadthing": "^5.6.1",
     "zod": "^3.22.2"
   }
 }
