--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -31,6 +32,7 @@
     "graphql-tag": "^2.12.6",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
+    "openai": "^4.11.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
