--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.8.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.4.3",
+    "@clerk/nextjs": "^4.25.3",
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -28,8 +30,6 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "openai": "^4.11.1",
